AssignmentGit/force-app/main/default/objects/ManagerG__c/ManagerG__c.object-meta.xml
<CustomObject>
    <label>ManagerG</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ManagersG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>