AssignmentGit/force-app/main/default/objects/ManagerG__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR( TODAY() ) -  YEAR(  Date__c  )  -  IF( MONTH( TODAY() ) &lt;  MONTH(  Date__c  ) || ( MONTH( TODAY() ) =  MONTH(  Date__c ) &amp;&amp;  DAY( TODAY() ) &lt;  DAY( Date__c )  )  , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>