AssignmentGit/force-app/main/default/objects/ManagerG__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>