AssignmentGit/force-app/main/default/objects/ManagerG__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>ManagersG</relationshipLabel>
    <relationshipName>ManagersG</relationshipName>
    <type>Lookup</type>
</CustomField>