AssignmentGit/force-app/main/default/objects/ManagerG__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <label>Total Salary</label>
    <summarizedField>DeveloperD__c.Salary__c</summarizedField>
    <summaryForeignKey>DeveloperD__c.Reporting_Manager__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>