AssignmentGit/force-app/main/default/objects/ManagerG__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>ManagersG</relationshipLabel>
    <relationshipName>ManagersG</relationshipName>
    <type>Lookup</type>
</CustomField>