AssignmentGit/force-app/main/default/objects/ManagerG__c/validationRules/Assignment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Phone__c ) &amp;&amp; 
ISBLANK( Email__c )</errorConditionFormula>
    <errorMessage>You must fill email and phone before
saving</errorMessage>
</ValidationRule>